# skillpi

./: .gitignore  CLAWPI_VISION.md  DEPLOYMENT.md  DEPLOY_SUMMARY.md  DEVELOPMENT.md  FINAL_SUMMARY.md  FUTURE_VISION.md  QUICKSTART.md  README.md  REAL_DATA_UPDATE.md  REFACTORING_SUMMARY.md  TEST_REPORT.md  UI_MODERNIZATION.md  VERIFICATION_REPORT.md  VITEPRESS_MIGRATION.md  config.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: sources.yaml
data/skills/: all_skills.json  curated_tools.json  example_skills.yaml  imported_skills.json  real_tools.json
docs/: DEPLOY.md  GITHUB_ACTIONS_UPDATE.md  GITHUB_PAGES_FIX.md  MKDOCS_2_0_NOTE.md  about.md  index.md
docs/.vitepress/: config.ts
docs/guide/: quick-start.md
docs/skills/: concepts.md  tools.md  workflows.md
docs/skills/concepts/: 16s-rrna-concept.md  16s-rrna-sequencing.md  alpha-diversity.md  metagenomics-sequencing.md
docs/skills/tools/: biom-format.md  dada2-pipeline.md  dada2.md  emperor.md  fastp.md  humann-3.md  megahit.md  metaphlan-4.md  metaphlan.md  microbiome.md  mothur.md  qiime2-amplicon.md  qiime2.md  scikit-bio.md
docs/skills/workflows/: assembly-workflow.md  biobakery-workflow.md
docs/stylesheets/: extra.css
pipelines/: Snakefile
scripts/: cleanup.sh  deep_cleanup.sh  deploy.sh  fetch_github.py  fetch_pypi.py  full_test.sh  generate_docs.py  generate_from_example.py  merge_skills.py  test_real_scrape.py  update_with_real_docs.py
src/skillpi/: __init__.py  assessor.py  cli.py  importer.py  logger.py  models.py  wrappers.py
src/skillpi/generators/: __init__.py  mkdocs_gen.py
src/skillpi/scrapers/: __init__.py  base.py  biorxiv.py  (+2 more)
tests/: conftest.py  test_cli.py  test_models.py  test_scrapers.py
